login succesfully added with redirect and isAuth

--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -9,3 +9,12 @@
     border-radius: 20px;
     padding: 10px;
 }
+
+.GoogleButton{
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    cursor: pointer;
+    height: 40px;
+    width: 250px;
+}
