--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body{
   text-align: center;
     padding: 0%;
     margin: 0%;
-    font-family: 'Roboto' sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     background-color: rgb(73, 73, 73);
 }
