--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -28,3 +28,12 @@ a{
     text-decoration: none;
     color: white;
 }
+
+.LogOut{
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    cursor: pointer;
+    height: 40px;
+    width: 200px;
+}
