--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     background-color: rgb(73, 73, 73);
+    align-items: center;
+    align-self: center;
+    align-content: center;
 }
