--- a/src/Util/SesSettings.css
+++ b/src/Util/SesSettings.css
@@ -1,4 +1,43 @@
+:root{
+    --purple: #8155BA;
+    --green: #4aec8c;
+}
+
+
+
 .SesSettings{
     color: white;
     margin: 40px;
+    font-weight: lighter;
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    float: left;
 }
+
+.slider{
+    height: 40px;
+    margin: 20px;
+    float: left;
+    border: 2px solid var(--purple); 
+    border-radius: 20px;
+    width: 400px; 
+}
+
+.thumb{
+    background-color: var(--purple);
+    border: none;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.slider.green{
+    border: 2px solid var(--green);
+}
+
+.slider.green .thumb{
+    background-color: var(--green);
+}
+
