--- a/src/Pages/Startpage.css
+++ b/src/Pages/Startpage.css
@@ -19,10 +19,11 @@
 }
 
 .Startbtn{
-    background-image: linear-gradient(to right, rgb(44, 88, 155), rgb(140, 189, 212));
+    background-color: rgb(22, 22, 22);
     border: none;
-    height: 40px;
+    height: 50px;
     width: 50px;
+    margin: 20px;
     color: white;
     border-radius: 20px;
     cursor: pointer;
