--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -3,10 +3,20 @@
     margin: 0%;
 }
 
+.bod{
+    display: flex;
+    flex-direction: column;
+}
+
+.Recent{
+    float: left;
+    color: white;
+}
+
 .startCard{
     margin: 20px;
-    width:97vw;
-    background-image: linear-gradient(-45deg ,rgb(137, 207, 178) ,rgb(29, 76, 129), rgb(23, 80, 61));
+    width:83vw;
+    background-image: linear-gradient(-45deg ,rgb(137, 207, 178) ,rgb(29, 76, 129), rgb(207, 175, 145));
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 350px;
