--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -1,16 +1,20 @@
 .Dashboard{
     padding: 0%;
     margin: 0%;
+    display: flex;
 }
 
 .bod{
     display: flex;
     flex-direction: column;
+   
 }
-.nav{
+.navB{
     position: sticky;
-
+    right: 0;
+    left: 0;
 }
+
 
 .Recent{
     float: left;
