--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -11,11 +11,11 @@
    
 }
 
-.GoogleButton{
-    background-color: black;
-    color: white;
-    border-radius: 20px;
-    cursor: pointer;
-    height: 40px;
-    width: 250px;
+.logBox{
+    display: grid;
+    place-items: center;
+    background-color: rgb(41, 44, 51);
+    padding: 0%;
+    margin: 0%;
+    height: 100vh;   
 }
