--- a/src/Pages/Startpage.css
+++ b/src/Pages/Startpage.css
@@ -5,26 +5,12 @@
     text-align: center;
     vertical-align: middle;
     margin: 20px;
+    background-color: rgb(41, 44, 51);
+    padding: 0%;
+    margin: 0%;
+    height: 100vh;   
     
-   
-    
 
 }
 
-.StartPageCont>h1{
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    vertical-align: middle;
-}
 
-.Startbtn{
-    background-color: rgb(22, 22, 22);
-    border: none;
-    height: 50px;
-    width: 50px;
-    margin: 20px;
-    color: white;
-    border-radius: 20px;
-    cursor: pointer;
-}
