--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -1,16 +1,19 @@
-.Dashboard{
+.Page{
     padding: 0%;
     margin: 0%;
     display: flex;
+    background-color: rgb(41, 44, 51);
+    height: 100vh;
 }
 
 .bod{
+    margin-left: 80px;
     display: flex;
     flex-direction: column;
    
 }
 .navB{
-    position: sticky;
+    position: absolute;
     right: 0;
     left: 0;
 }
@@ -19,16 +22,19 @@
 .Recent{
     float: left;
     color: white;
+    margin: 20px;
 }
 
 .startCard{
     margin: 20px;
-    width:83vw;
+    width:93vw;
     background-image: linear-gradient(-45deg ,rgb(137, 207, 178) ,rgb(29, 76, 129), rgb(207, 175, 145));
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 350px;
     border-radius: 20px;
+    text-align: center;
+    align-items: center;
     color: white;
     padding: 10px;
 
@@ -63,15 +69,15 @@
 .rowCard{
    display: flex;
    flex-direction: row;
-    background-color: rgb(44, 44, 44);
-    margin: 20px;
-    height: 60px;
-    padding: 10px;
+    background-color: rgb(12, 12, 12);
+   margin-top: 20px;
+    height: 80px;
+    padding: 15px;
     place-items: center;
-    border-radius: 20px;
+    border-radius: 13px;
     font-weight: lighter;
-    font-size: 20px;
-    width: 97%;
+    font-size: 15px;
+    width: 100%;
 }
 
 .rowCardTitle{
@@ -87,7 +93,26 @@
     margin-right: 50px;
 }
 
-nav{
-    position: sticky;
+
+
+
+.startCard1{
+    margin: 20px;
+    width:93vw;
+    background-image: linear-gradient(-45deg ,rgb(207, 137, 137) ,rgb(231, 74, 74), rgb(196, 224, 158));
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 350px;
+    border-radius: 20px;
+    text-align: center;
+    align-items: center;
+    color: white;
+    padding: 10px;
+
 }
 
+.buttoninlin{
+    display: flex;
+    align-items: center;
+    
+}
