--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -94,7 +94,7 @@
 }
 
 
-
+/* Sessions Page Adjustments */
 
 .startCard1{
     margin: 20px;
@@ -102,7 +102,7 @@
     background-image: linear-gradient(-45deg ,rgb(207, 137, 137) ,rgb(231, 74, 74), rgb(196, 224, 158));
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    height: 350px;
+    height: 150px;
     border-radius: 20px;
     text-align: center;
     align-items: center;
@@ -111,8 +111,10 @@
 
 }
 
-.buttoninlin{
-    display: flex;
-    align-items: center;
+
+
+.bod1{
     
+    display: flex;
+    flex-direction: column;
 }
