--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -13,7 +13,7 @@
    
 }
 .navB{
-    position: absolute;
+    position: fixed;
     right: 0;
     left: 0;
 }
@@ -25,20 +25,7 @@
     margin: 20px;
 }
 
-.startCard{
-    margin: 20px;
-    width:93vw;
-    background-image: linear-gradient(-45deg ,rgb(137, 207, 178) ,rgb(29, 76, 129), rgb(207, 175, 145));
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    height: 350px;
-    border-radius: 20px;
-    text-align: center;
-    align-items: center;
-    color: white;
-    padding: 10px;
 
-}
 
 
 
@@ -56,32 +43,7 @@
 }
 
 
-.rowCard{
-   display: flex;
-   flex-direction: row;
-    background-color: rgb(12, 12, 12);
-   margin-top: 20px;
-    height: 80px;
-    padding: 15px;
-    place-items: center;
-    border-radius: 13px;
-    font-weight: lighter;
-    font-size: 15px;
-    width: 100%;
-}
 
-.rowCardTitle{
-    margin-right: 50%;
-    margin-left: 10px;
-}
-
-.WTime{
-   margin-right: 120px;
-}
-
-.BTime{
-    margin-right: 120px;
-}
 
 
 /* Sessions Page Adjustments */
