all modals set to dark mode

--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -60,3 +60,8 @@
     display: flex;
     flex-direction: column;
 }
+
+.special_modal .modal-content{
+    background-color: rgb(41, 44, 51);;
+    color: #fff;
+ }
