--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -1,6 +1,6 @@
 .Sidebar{
   
-    height:98%;
+    height:100%;
     
     align-items: center;
     justify-content: center;
@@ -8,7 +8,7 @@
    
     vertical-align: middle;
     
-    
+    position: fixed;
     width: 80px;
     text-align: center;
     padding: 20px;
