--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -12,7 +12,7 @@
     width: 80px;
     text-align: center;
     padding: 20px;
-    background-color: rgb(12, 12, 12);
+    background-color: #282b2e;
     color: white;
     
     
