--- a/src/Pages/Startpage.css
+++ b/src/Pages/Startpage.css
@@ -5,7 +5,7 @@
     text-align: center;
     vertical-align: middle;
     margin: 20px;
-    background-color: rgb(41, 44, 51);
+    background-color: #17181a;
     padding: 0%;
     margin: 0%;
     height: 100vh;   
