updated all form controls+ added initial modals

--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -90,13 +90,13 @@
     
   }
 
-  .form-control:not(active){
+  .special_modal .form-control:not(active){
     background-color:#17181a!important;
     color: lightgray!important;
     border-color: gray!important;
  }
 
- .form-control:focus{
+  .special_modal.form-control:focus{
     background-color:#17181a!important;
     color: lightgray!important;
     border-color: gray!important;
