Fixed? Sidebar scaling, fixed media board

--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -4,7 +4,7 @@
     width: 100vw;
     display: flex;
     background-color: #17181a;
-    height: 100vh;
+    height: 100vh!important;
     padding-bottom: 10%;
     
 }
