--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -1,10 +1,12 @@
 .Page{
     padding: 0%;
     margin: 0%;
-    width: 100vw;
+    max-width: 100%;
+    min-width: 100vw;
     display: flex;
     background-color: #17181a;
-    height: 100vh!important;
+    max-height: 100%; 
+    min-height: 100vh;
     padding-bottom: 10%;
     
 }
