glassmorhpism modals, started on youtube

--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -118,4 +118,10 @@
   border-color: gray!important;
 }
 
+.timer-modal .modal-content{
+  background-color: rgba( 255, 255, 255, 0.25 );
+  backdrop-filter: blur( 50px );
+  box-shadow:0 8px 32px 0 rgba( 31, 38, 135, 0.37 ) ;
+}
+
  
