--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -4,6 +4,7 @@
     max-width: 100%;
     min-width: 100vw;
     display: flex;
+    flex-direction: column;
     background-color: #17181a;
     max-height: 100%; 
     min-height: 100vh;
