--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -122,6 +122,7 @@
 .thin_modal .modal-content{
   background-color: #17181a;
   color: lightgray;
+  border: 2px solid #393d40
 }
 
 .thin_modal .form-control:focus{
@@ -140,6 +141,7 @@
   background-color: rgba( 255, 255, 255, 0.25 );
   backdrop-filter: blur( 50px );
   box-shadow:0 8px 32px 0 rgba( 31, 38, 135, 0.37 ) ;
+  border: 2px solid  #b1b4b5
 }
 
 
