Templates page made, UI changes

--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -191,3 +191,24 @@
   background-color: rgb(84, 132, 209) !important;
   border-color: rgb(84, 132, 209) !important;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: '10px';
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  border-radius: '10px';
+}
